# agent-suite

./: .gitignore  AGENTS.md  LICENSE  README.md  handoff-plan019-b2-generalize.md  handoff-plan019-b2b3.md  pyproject.toml  suite.env.example
.claude/: settings.json
.github/workflows/: ci.yml  release.yml
data/: candidate-inventory.json  claims-ledger.json  cli-conformance.json  cli-error-envelope.schema.json  release-board.json  support-matrix.json  v1-feature-matrix.json
data/contracts/: evidence-export.json  health.json  human-surfaces.json  identity.json  install-harness.json  knowledge.json  lifecycle.json  memory-provider.json  notification.json  windows-setup.json
deploy/systemd/: agent-suite-backup.service  agent-suite-backup.timer  agent-suite-doctor-alert.service  agent-suite-doctor-alert.timer
deploy/windows/: agent-suite-backup.ps1  agent-suite-doctor-alert.ps1
docs/: 2026-07-10-holistic-suite-review.md  agent-worktrees.md  b3-cli-contract-audit.md  bootstrap-contract.md  chain-preserving-redaction.md  claims-ledger-index.md  claims-ledger.md  cli-contract.md  codex-plugin-operations.md  deployment-guide.md  disaster-recovery.md  gate-0-ratification.md  harness-target-hermes.md  install-docker.md  install-harness-contract.md  install-linux.md  install-windows.md  key-custody-threat-model.md  key-operations.md  multi-user-onboarding.md  operating-the-suite.md  process-calibration.md  publication-review.md  release-manifest.md  secrets-akv.md  secrets-vault.md  secrets-windows.md  v1-feature-matrix.md  v2-blueprint.md  windows-setup-protocol.md
docs/deployments/: 2026-07-10-mvmhermes01.md  2026-07-10-work-station-01.md
githooks/: pre-commit
golden/: convergence-proof-20260718T232221Z.md  convergence-proof-20260719T030030Z.md
golden/operating-history/: README.md
packaging/conformance/: README.md  pyproject.toml
plans/: 001-bootstrap-doctor-lock.md  002-enforce-interop-proof-ci.md  003-windows-compatibility.md  004-dogfood-deployment.md  005-operate-the-suite.md  006-codex-harness-cohesion.md  006-deployment-simplification.md  007-codex-harness-cohesion.md  008-robust-end-state.md  009-feature-complete-v1.md  010-full-product-horizon.md  011-sealed-session-evidence.md  012-memory-engine-composition.md  013-full-v1-human-surfaces.md  014-next-phases-windows-executor-dual-control-entra.md  015-production-grade-1-0-release.md  016-nist-ai-rmf-operational-profile.md  017-per-agent-credential-isolation.md  018-cli-surface-hardening.md  019-reduce-cross-member-coupling-tax.md
reflections/: 2026-07-03-glm-5-2.md  2026-07-05-glm-5-2.md  2026-07-06-glm-5-2.md  2026-07-07-glm-5-2.md  2026-07-09-glm-5-2.md  2026-07-10-glm-5-2.md  2026-07-11-fable-5-close-out.md  2026-07-11-glm-5-2-2.md  2026-07-11-glm-5-2-3.md  2026-07-11-glm-5-2-4.md  2026-07-11-glm-5-2.md  2026-07-12-glm-5-2-2.md  2026-07-12-glm-5-2-3.md  2026-07-12-glm-5-2-4.md  2026-07-12-glm-5-2-5.md  2026-07-12-glm-5-2.md  2026-07-13-glm-5-2-2.md  2026-07-13-glm-5-2.md  2026-07-14-glm-5-2.md  2026-07-19-glm-5-2.md  2026-07-20-fable-5.md  2026-07-20-qwen3-8-max-preview.md  2026-07-22-gpt-5-6-sol.md  2026-07-24-qwen3-8-max-preview-2.md  2026-07-24-qwen3-8-max-preview.md
scripts/: agent-worktree  check-lock-agreement.py  check_committed_identifiers.py  feature-matrix.py  feature-probes.py  identifier-gate.py  install-git-hooks.sh  install-windows.ps1  install-winsw.py  plan-index.py  validate-contracts.py
src/agent_suite/: __init__.py  alerting.py  backup.py  bootstrap.py  cli.py  codex_catalog.py  codex_health.py  codex_marketplace.py  codex_verify.py  components.py  config.py  deploy.py  doctor.py  dpapi.py  dual_control.py  dual_control_store.py  entra.py  evidence.py  harness.py  harness_install.py  human_surfaces.py  inventory.py  key_watch.py  lock.py  lock_agreement.py  onboard.py  profiles.py  release_artifacts.py  release_manifest.py  runtime_provenance.py  schedule.py  upgrade.py  verify_restore.py  windows_observation.py  windows_setup.py  winsw.py
src/agent_suite/conformance/: __init__.py  envelope.py  kit.py
tests/: conftest.py  test_adversarial_corpus.py  test_alerting.py  test_architecture.py  test_backup.py  test_bootstrap.py  test_cli.py  test_cli_conformance.py  test_codex_catalog.py  test_codex_health.py  test_codex_live.py  test_codex_marketplace.py  test_codex_verify.py  test_contracts.py  test_deploy.py  test_doctor.py  test_dpapi.py  test_dual_control.py  test_dual_control_replay.py  test_dual_control_store.py  test_entra.py  test_envelope.py  test_evidence.py  test_feature_matrix.py  test_harness.py  test_harness_install.py  test_human_surfaces.py  test_identifier_gate.py  test_interop.py  test_inventory.py  test_key_watch.py  test_lock.py  test_lock_agreement.py  test_lock_doctor_agreement.py  test_memory_provider.py  test_onboard.py  test_packaging.py  test_plan_index.py  test_profiles.py  test_release_artifacts.py  (+13 more)
