[project]
name = "agent-suite"
version = "0.0.1"
description = "Deploy the agent suite as one system: bootstrap, compatibility lock, and health umbrella over regista + its faces."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "YOUR-ORG" }]
keywords = ["agent-suite", "orchestration", "bootstrap", "health-check", "deployment"]
dependencies = ["agent-suite-conformance>=1.0.0"]

[project.urls]
Repository = "https://github.com/YOUR-ORG/agent-suite"

[project.optional-dependencies]
dev = ["ruff", "mypy", "pytest", "build", "hatchling"]  # build+hatchling: conformance wheel build-test
vault = ["hvac"]                     # HashiCorp Vault secret backend (edge only)
azure = ["azure-identity", "azure-keyvault-secrets", "PyJWT[crypto]"]  # Azure Key Vault + Entra (edge only)
windows = ["pywin32; sys_platform == 'win32'"]        # DPAPI / Credential Manager (edge only)
windows-full = ["agent-suite[windows]", "agent-suite[azure]"]  # all Windows deps in one extra

[project.scripts]
agent-suite = "agent_suite.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_suite"]

[tool.mypy]
strict = true
python_version = "3.12"
files = ["src"]

[[tool.mypy.overrides]]
module = "jwt.*"
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
