# Standalone distribution for the CLI contract v1 conformance kit (Plan 019 B1).
#
# ONE source of truth: src/agent_suite/conformance/ in this repo. This project
# builds that subtree into a tiny, publishable wheel — agent-suite-conformance —
# so sibling components depend on it as a normal pinned version
# (`agent-suite-conformance==X.Y`) instead of a git+SHA direct reference (which
# PyPI forbids in uploaded metadata, and which broke regista's 0.5.3 publish).
#
# The wheel ships only agent_suite/conformance/ with no agent_suite/__init__.py,
# so `agent_suite` resolves as a PEP 420 namespace in a consumer that installs
# ONLY this package. agent-suite proper is never published, so there is no
# regular-vs-namespace collision in practice.
#
# VERSION MUST EQUAL agent_suite.conformance.KIT_VERSION. The guard test
# tests/test_conformance_packaging.py fails CI if they drift.

[project]
name = "agent-suite-conformance"
version = "1.0.0"
description = "CLI contract v1 conformance kit for the agent suite (Plan 018 WI-2 / Plan 019 B1)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
keywords = ["agent-suite", "conformance", "cli-contract", "testing"]
dependencies = []  # stdlib-only, by design
# No authors/urls: matches the published sibling (regista) and avoids emitting
# a placeholder or a link to the private agent-suite repo on a public PyPI page.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Map the shared source subtree into the wheel as agent_suite/conformance/.
# No agent_suite/__init__.py is shipped -> PEP 420 namespace on the consumer.
force-include = { "../../src/agent_suite/conformance" = "agent_suite/conformance" }
# force-include alone defines the wheel contents; no auto-detected packages.
bypass-selection = true
# Keep byte-caches out of the published artifact (explicit intent; the build
# test asserts the wheel is pyc-free).
exclude = ["**/__pycache__", "**/*.py[cod]"]

[tool.hatch.build.targets.sdist]
force-include = { "../../src/agent_suite/conformance" = "agent_suite/conformance", "README.md" = "README.md" }
exclude = ["**/__pycache__", "**/*.py[cod]"]
